# JuMake-fast

./: Cargo.toml  Prompt.md  README.md
src/: build.rs  commands.rs  create_files.rs  create_project.rs  initialize_git.rs  main.rs  utils.rs
templates/AudioPluginTemplate/: CMakeLists.txt.template
