[package]
name = "jumake"
version = "0.1.2"
authors = ["Steffen Baranowsky BaraMGB@arcor.de"]
edition = "2021"
description = "JuMake is a command-line tool designed to simplify and accelerate the process of setting up new JUCE projects using CMake."
license = "MIT"
documentation = "https://github.com/BaraMGB/JuMake"
homepage = "https://github.com/BaraMGB/JuMake"
repository = "https://github.com/BaraMGB/JuMake"


[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
dialoguer = "0.11"
dirs = "5.0"
fs_extra = "1.3"
git2 = "0.19"
indoc = "2"
lazy_static = "1.5.0"
num_cpus = "1.16"
regex = "1.10.5"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
which = "4.4.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"